--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="rami.jpeg" alt="Rami Al-Baba">
+                <img src="WhatsApp%20Image%202025-09-06%20at%206.57.17%20PM.jpeg" alt="Rami Al-Baba">
             </div>
         </div>
     </section>
@@ -927,3 +927,4 @@
     </script>
 </body>
 </html>
+
